--- a/quote-app/src/main/resources/templates/quotes.html
+++ b/quote-app/src/main/resources/templates/quotes.html
@@ -7,9 +7,12 @@
     <meta name="description" content="Spring WebFlux Streaming"/>
     <meta name="author" content="Brian Clozel and Sebastien Deleuze"/>
     <title>Spring WebFlux Streaming</title>
-    <link rel="stylesheet" href="/webjars/bootstrap/3.3.7/css/bootstrap-theme.min.css"/>
-    <link rel="stylesheet" href="/webjars/bootstrap/3.3.7/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/webjars/highcharts/5.0.8/css/highcharts.css"/>
+    <!--<link rel="stylesheet" href="/webjars/bootstrap/3.3.7/css/bootstrap-theme.min.css"/>-->
+    <link rel="stylesheet" href="/webjars/bootstrap/4.0.0/css/bootstrap-theme.min.css"/>
+    <!--<link rel="stylesheet" href="/webjars/bootstrap/3.3.7/css/bootstrap.min.css"/>-->
+    <link rel="stylesheet" href="/webjars/bootstrap/4.0.0/css/bootstrap.min.css"/>
+    <!--<link rel="stylesheet" href="/webjars/highcharts/5.0.8/css/highcharts.css"/>-->
+    <link rel="stylesheet" href="/webjars/highcharts/6.0.7/css/highcharts.css"/>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -29,8 +32,9 @@
     <div id="chart" style="height: 400px; min-width: 310px"></div>
 </div>
 <script type="text/javascript" src="/webjars/jquery/1.11.1/jquery.min.js"></script>
-<script type="text/javascript" src="/webjars/highcharts/5.0.8/highcharts.js"></script>
-<script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!--<script type="text/javascript" src="/webjars/highcharts/5.0.8/highcharts.js"></script>-->
+<script type="text/javascript" src="/webjars/highcharts/6.0.7/highcharts.js"></script>
+<script type="text/javascript" src="/webjars/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script type="text/javascript">
     var chart = new Highcharts.chart('chart', {
         title: {
